# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
page_loader/: __init__.py  cli_args.py  page.py  utils.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
tests/fixtures/: expected_initial.html  initial.html
tests/fixtures/resources/: index.js
