[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Download page and all related resources"
authors = ["Deepsick"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
progress = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
flake8 = "^3.8.4"
pytest-cov = "^2.10.1"
requests-mock = "^1.8.0"

[tool.poetry.scripts]
page_loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
